--- a/BighornVisitationAnalysisSummer2019.Rmd
+++ b/BighornVisitationAnalysisSummer2019.Rmd
@@ -157,38 +157,39 @@ nodups$CP_ChstGth_cm[nodups$KI_Known_ID == "BHS_1738"] <- "84.5"
 nodups$CP_ChstGth_cm[nodups$KI_Known_ID == "BHS_1739"] <- "96.0"
 as.numeric(nodups$CP_ChstGth_cm)
 
-#WEIGHT
+#WEIGHT - this is unadjusted, raw weight (no tar)b/c the vast majority of the entries do not have a tar weight or a net weight.
 as.character(nodups$CP_Weight..kg.)
-nodups$CP_Weight..kg.[nodups$KI_Known_ID == "BHS_1428"] <- "149.0"
-nodups$CP_Weight..kg.[nodups$KI_Known_ID == "BHS_1490"] <- "158.2"
-nodups$CP_Weight..kg.[nodups$KI_Known_ID == "BHS_1493"] <- "162.5"
-nodups$CP_Weight..kg.[nodups$KI_Known_ID == "BHS_1494"] <- "145.1"
-nodups$CP_Weight..kg.[nodups$KI_Known_ID == "BHS_1563"] <- "165.0"
-nodups$CP_Weight..kg.[nodups$KI_Known_ID == "BHS_1565"] <- "136.0"
-nodups$CP_Weight..kg.[nodups$KI_Known_ID == "BHS_1574"] <- "146.0"
-nodups$CP_Weight..kg.[nodups$KI_Known_ID == "BHS_1575"] <- "143.0"
-nodups$CP_Weight..kg.[nodups$KI_Known_ID == "BHS_1576"] <- "141.0"
-nodups$CP_Weight..kg.[nodups$KI_Known_ID == "BHS_1577"] <- "141.0"
-nodups$CP_Weight..kg.[nodups$KI_Known_ID == "BHS_1581"] <- "139.0"
-nodups$CP_Weight..kg.[nodups$KI_Known_ID == "BHS_1582"] <- "138.0"
-nodups$CP_Weight..kg.[nodups$KI_Known_ID == "BHS_1583"] <- "142.5"
-nodups$CP_Weight..kg.[nodups$KI_Known_ID == "BHS_1587"] <- "139.0"
-nodups$CP_Weight..kg.[nodups$KI_Known_ID == "BHS_1592"] <- "137.5"
-nodups$CP_Weight..kg.[nodups$KI_Known_ID == "BHS_1594"] <- "125.0"
-nodups$CP_Weight..kg.[nodups$KI_Known_ID == "BHS_1682"] <- "140.0"
-nodups$CP_Weight..kg.[nodups$KI_Known_ID == "BHS_1683"] <- "144.0"
-nodups$CP_Weight..kg.[nodups$KI_Known_ID == "BHS_1684"] <- "149.0"
-nodups$CP_Weight..kg.[nodups$KI_Known_ID == "BHS_1689"] <- "155.5"
-nodups$CP_Weight..kg.[nodups$KI_Known_ID == "BHS_1713"] <- "140.0"
-nodups$CP_Weight..kg.[nodups$KI_Known_ID == "BHS_1730"] <- "152.0"
-nodups$CP_Weight..kg.[nodups$KI_Known_ID == "BHS_1731"] <- "161.0"
-nodups$CP_Weight..kg.[nodups$KI_Known_ID == "BHS_1733"] <- "153.0"
-nodups$CP_Weight..kg.[nodups$KI_Known_ID == "BHS_1734"] <- "149.5"
-nodups$CP_Weight..kg.[nodups$KI_Known_ID == "BHS_1736"] <- "118.0"
-nodups$CP_Weight..kg.[nodups$KI_Known_ID == "BHS_1738"] <- "130.5"
-nodups$CP_Weight..kg.[nodups$KI_Known_ID == "BHS_1739"] <- "145.0"
+nodups$CP_Weight..kg.[nodups$KI_Known_ID == "BHS_1428"] <- "63.0"
+nodups$CP_Weight..kg.[nodups$KI_Known_ID == "BHS_1490"] <- "82.0"
+nodups$CP_Weight..kg.[nodups$KI_Known_ID == "BHS_1493"] <- "87.4"
+nodups$CP_Weight..kg.[nodups$KI_Known_ID == "BHS_1494"] <- "64.6"
+nodups$CP_Weight..kg.[nodups$KI_Known_ID == "BHS_1563"] <- "89.8"
+nodups$CP_Weight..kg.[nodups$KI_Known_ID == "BHS_1565"] <- "61.3"
+nodups$CP_Weight..kg.[nodups$KI_Known_ID == "BHS_1574"] <- "63.6"
+nodups$CP_Weight..kg.[nodups$KI_Known_ID == "BHS_1575"] <- "67.1"
+nodups$CP_Weight..kg.[nodups$KI_Known_ID == "BHS_1576"] <- "58.5"
+nodups$CP_Weight..kg.[nodups$KI_Known_ID == "BHS_1577"] <- "61.3"
+nodups$CP_Weight..kg.[nodups$KI_Known_ID == "BHS_1581"] <- "68.0"
+nodups$CP_Weight..kg.[nodups$KI_Known_ID == "BHS_1582"] <- "59.2"
+nodups$CP_Weight..kg.[nodups$KI_Known_ID == "BHS_1583"] <- "63.0"
+nodups$CP_Weight..kg.[nodups$KI_Known_ID == "BHS_1587"] <- "65.5"
+nodups$CP_Weight..kg.[nodups$KI_Known_ID == "BHS_1592"] <- "60.5"
+nodups$CP_Weight..kg.[nodups$KI_Known_ID == "BHS_1594"] <- "56.5"
+nodups$CP_Weight..kg.[nodups$KI_Known_ID == "BHS_1682"] <- "61.0"
+nodups$CP_Weight..kg.[nodups$KI_Known_ID == "BHS_1683"] <- "64.6"
+nodups$CP_Weight..kg.[nodups$KI_Known_ID == "BHS_1684"] <- "76.3"
+nodups$CP_Weight..kg.[nodups$KI_Known_ID == "BHS_1689"] <- "85.2"
+nodups$CP_Weight..kg.[nodups$KI_Known_ID == "BHS_1713"] <- "59.6"
+nodups$CP_Weight..kg.[nodups$KI_Known_ID == "BHS_1730"] <- "69.0"
+nodups$CP_Weight..kg.[nodups$KI_Known_ID == "BHS_1731"] <- "100.04"
+nodups$CP_Weight..kg.[nodups$KI_Known_ID == "BHS_1733"] <- "77.3"
+nodups$CP_Weight..kg.[nodups$KI_Known_ID == "BHS_1734"] <- "58.6"
+nodups$CP_Weight..kg.[nodups$KI_Known_ID == "BHS_1736"] <- "47.1"
+nodups$CP_Weight..kg.[nodups$KI_Known_ID == "BHS_1738"] <- "44.2"
+nodups$CP_Weight..kg.[nodups$KI_Known_ID == "BHS_1739"] <- "71.8"
+as.numeric(nodups$CP_Weight..kg.)
 
-# BHS_1428 Weight comes back as 63 and 89, chest girth comes back as 100.0 and 108.3.
+
 
 
 
